Changes for tpop3d
$Id$

1.4.1

The facility as which tpop3d logs messages may now be changed from the
configuration file.

A serious bug in TPOP3D::AuthDriver which affected operation under
auth-other was corrected.

1.3.5

A bug in the log printing code which caused trouble on some architectures was
fixed. A bug in the maildir code which caused the STAT command to claim that
the size of the mailbox was 0 was also fixed. The code was cleaned up slightly
in a comp.lang.c sense.

Authenticators are now passed the IP address of the connected client, which
makes writing POP-before-SMTP authenticators easier.

Facility for specifying the SQL queries used by auth-mysql at runtime was
added, thanks to Mike Bremford. In addition, it is now possible to specify the
types of mailboxes used by auth-mysql.

Support for TCP Wrappers was added.

tpop3d will now remove a stale PID file on startup, rather than exiting.

Support for the MySQL PASSWORD() function as a password-hashing method was
added.

A bug in the supplied TPOP3D::AuthDriver perl module was fixed, thanks to
Steve Benson.

A `StartupItem' (Mac OS X startup script) for tpop3d was contributed by
Gerben Wierda, along with notes on using tpop3d on Mac OS X.

1.3.4

Minor changes, and addition of metadata caching for BSD mailspools; in
addition, the mailbox object was modified for efficiency reasons.

Fixed a bug which could cause child processes to fail with SIGSEGV under heavy
load.

Added an auth-perl script for authentication against an Oracle database,
contributed by Paul Makepeace.

1.3.3

Fixes for a couple of portability bugs which crept in to 1.3.2.

1.3.2

Minor changes, and an update for auth-mysql to allow passwords in formats
other than the default straight MD5 checksums. Different formats are denoted
by a prefixed token enclosed in { }. Presently supported are:

    {crypt}...          crypt(3) hash
    {crypt_md5}...      crypt_md5 hash
    {plaintext}...      plaintext password