@@ -22,3 +22,8 @@ auth-mysql-enable:      yes
 auth-mysql-database:    vmail
 auth-mysql-username:    vmail
 auth-mysql-password:    moocow
+
+auth-other-enable:      yes
+auth-other-program:     /home/chris/software/tpop3d/scripts/example
+auth-other-user:        root
+auth-other-group:       root
