@@ -9,6 +9,18 @@ configuration file.
 A serious bug in TPOP3D::AuthDriver which affected operation under
 auth-other was corrected.
 
+Fixed the behaviour of STAT after DELE.
+
+UIDs in maildir mailboxes are now generated by an MD5 hash of the file name,
+fixing a uniqueness problem in previous versions. This means that this version
+of tpop3d will display different UIDs by comparison with old versions. See the
+comment in the maildir_make_indexpoint function in maildir.c, and also the
+archived mailing list posting at
+  http://lists.beasts.org/pipermail/tpop3d-discuss/2001-November/000308.html
+for more information, or if you want to use the old scheme regardless (not
+recommended). In addition, tpop3d now marks messages in maildirs as `seen',
+using the `:2,S' filename suffix, rather than just moving them to cur/.
+
 1.3.5
 
 A bug in the log printing code which caused trouble on some architectures was
